# Vigilante-Game-Framework

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  VFrameExample.sln  VFrameExample.vcxproj  VFrameExample.vcxproj.filters  error.txt
Docs/: Doxyfile
Example/: BloomPostEffect.cpp  BloomPostEffect.h  CMakeLists.txt  Gemstone.cpp  Gemstone.h  GemstoneOld.cpp  GemstoneOld.h  LightingPostEffect.cpp  LightingPostEffect.h  PerlinNoise.cpp  PerlinNoise.h  ScoreboardEffect.cpp  ScoreboardEffect.h  States.cpp  States.h  WavePostEffect.cpp  WavePostEffect.h  main.cpp
Example/Assets/: Add.frag  AlphaThreshold.frag  Brightness.frag  CircleMask.frag  Cube.mtl  Dissolve.frag  DownSample.frag  GaussianBlur.frag  Glitch.frag  HorizontalWave.frag  Lighting.frag  LinedWave.frag  Low-Poly-Racing-Car.mtl  VerticalWave.frag  bloom.frag  level.csv
VFrame/: CMakeLists.txt  V3DBatchModelGroup.cpp  V3DBatchModelGroup.h  V3DCamera.cpp  V3DCamera.h  V3DLight.h  V3DLightShader.cpp  V3DLightShader.h  V3DModel.cpp  V3DModel.h  V3DObjModel.cpp  V3DObjModel.h  V3DObject.cpp  V3DObject.h  V3DScene.cpp  V3DScene.h  V3DShader.cpp  V3DShader.h  V9Slice.cpp  V9Slice.h  VAnimation.cpp  VAnimation.h  VAnimationManager.h  VAsync.cpp  VAsync.h  VBackdrop.cpp  VBackdrop.h  VBase.cpp  VBase.h  VCamera.cpp  VCamera.h  VCandle.cpp  VCandle.h  VCollision.cpp  VCollision.h  VColour.h  VContent.cpp  VContent.h  VDebugRenderer.cpp  VDebugRenderer.h  (+65 more)
VFrame-Static/: VFrame-Static.vcxproj  VFrame-Static.vcxproj.filters
VFrame/depend/: gamepad.c  glew.c
cmake/: FindCHIPMUNK2D.cmake  FindCandle.cmake  FindGLEW.cmake
docs/: Doxyfile  _config.yml  _v3_d_light_8h.js  _v3_d_light_shader_8h_source.html  _v3_d_model_8h.js  _v3_d_object_8h_source.html  _v3_d_scene_8h.html  _v_animation_8h.html  _v_animation_8h_source.html  _v_backdrop_8h_source.html  _v_base_8h.html  _v_base_8h_source.html  _v_camera_8h.html  _v_content_8h.html  _v_content_8h_source.html  _v_emitter_8h.html  _v_input_handler_8h.html  _v_interpolate_8h_source.html  _v_range_8h_source.html  _v_tile_8h.html  annotated_dup.js  class_v3_d_model.html  class_v3_d_obj_model-members.html  class_v3_d_perspective_camera.js  class_v_animation.js  class_v_animation_manager-members.html  class_v_collision.html  class_v_content-members.html  class_v_emitter-members.html  class_v_emitter.js  class_v_interpolate-members.html  class_v_interpolate.html  class_v_particle.js  class_v_post_effect-members.html  class_v_post_effect.js  class_v_post_effect_multipass-members.html  class_v_render_group-members.html  class_v_sprite-members.html  class_v_text_path-members.html  class_v_tile-members.html  (+26 more)
docs/html/: _v3_d_batch_model_group_8h.html  _v3_d_batch_model_group_8h_source.html  _v3_d_camera_8h.html  _v3_d_camera_8h_source.html  _v3_d_light_8h.html  _v3_d_light_8h_source.html  _v3_d_light_shader_8h.html  _v3_d_light_shader_8h_source.html  _v3_d_model_8h.html  _v3_d_model_8h_source.html  _v3_d_obj_model_8h.html  _v3_d_obj_model_8h_source.html  _v3_d_object_8h.html  _v3_d_object_8h_source.html  _v3_d_scene_8h.html  _v3_d_scene_8h_source.html  _v3_d_shader_8h.html  _v3_d_shader_8h.js  _v3_d_shader_8h_source.html  _v9_slice_8h_source.html  _v_animation_8h.html  _v_animation_8h_source.html  _v_animation_manager_8h.html  _v_animation_manager_8h_source.html  _v_async_8h.html  _v_async_8h_source.html  _v_backdrop_8h.html  _v_backdrop_8h_source.html  _v_base_8h.html  _v_base_8h.js  _v_base_8h_source.html  _v_camera_8h.html  _v_camera_8h.js  _v_camera_8h_source.html  _v_collision_8h.html  _v_collision_8h.js  _v_collision_8h_source.html  _v_colour_8h.html  _v_colour_8h_source.html  _v_content_8h.html  (+385 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_3.js  enums_0.js  enums_1.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+51 more)
docs/search/: all_7.js  classes_0.js  enums_2.js  files_1.js  functions_1.js  functions_5.js  functions_9.js  functions_d.js  variables_4.js  variables_d.js
