project(VigilanteGameFramework)
cmake_minimum_required(VERSION 3.1.0)
if(${WIN32})
	add_compile_options(/Zc:rvalueCast)
	if(${VGF_LTO})
		set(VGF_LTO_FLAGS "/LTCG /GL")
	endif()
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ox /Ot ${VGF_LTO_FLAGS}")
	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /Ox /Ot ${VGF_LTO_FLAGS}")
	set(CMAKE_LINK_FLAGS_RELEASE "${CMAKE_LINK_FLAGS_RELEASE} /Ox /Ot ${VGF_LTO_FLAGS}")
	set(CMAKE_LINK_FLAGS_RELWITHDEBINFO "${CMAKE_LINK_FLAGS_RELWITHDEBINFO} /Ox /Ot ${VGF_LTO_FLAGS}")
else(${WIN32})
	add_compile_options(-std=c++11 -Wall -Wextra -Wpedantic)
	if(${VGF_LTO})
		set(VGF_LTO_FLAGS "-flto ")
	endif()
	set(VGF_EXTRA_FLAGS "-O3")
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${VGF_EXTRA_FLAGS} ${VGF_LTO_FLAGS}")
	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${VGF_EXTRA_FLAGS} ${VGF_LTO_FLAGS}")
	set(CMAKE_LINK_FLAGS_RELEASE "${CMAKE_LINK_FLAGS_RELEASE} ${VGF_EXTRA_FLAGS} ${VGF_LTO_FLAGS}")
	set(CMAKE_LINK_FLAGS_RELWITHDEBINFO "${CMAKE_LINK_FLAGS_RELWITHDEBINFO} ${VGF_EXTRA_FLAGS} ${VGF_LTO_FLAGS}")
endif(${WIN32})
link_directories(${PROJECT_BINARY_DIR})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

add_subdirectory(VFrame)
add_subdirectory(Example)
